# lfs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  benchmarks.md  comparision.md  comparison.md  format.md  licence  performance.md  plan.md  treeview.md  whyichooseit.md
.github/workflows/: ci.yml
benches/: allocator_bench.rs  btree_bench.rs  io_bench.rs
docs/: admin_guide.md  architecture.md  benchmarks.md  build.md  comparison.md  design.md  disk_format.md  faq.md  kernel_integration.md  perf_targets.md  performance.md
examples/: sample_config.json  sample_mount.sh
include/: lfs_format.h
specifications/: allocator.md  compression.md  directories.md  disk_layout.md  encryption.md  extents.md  inode.md  journal.md  snapshots.md  superblock.md  transactions.md
src/: Makefile  balloc.c  balloc.h  dir.c  dir.h  disk.rs  file.c  file.h  fs.rs  inode.c  inode.h  inode.rs  journal.c  journal.h  lfs.h  lib.rs  main.rs  super.c  super.h
src/allocator/: bitmap.rs  cache.rs  mod.rs  tree.rs
src/api/: mod.rs
src/btree/: node.rs  tree.rs
src/cache/: dir_cache.rs  extent_cache.rs  inode_cache.rs  mod.rs  node_cache.rs
src/common/: mod.rs
src/debug/: mod.rs
src/directory/: entries.rs  mod.rs  tree.rs
src/disk/: block_io.rs  mod.rs
src/extents/: mod.rs  tree.rs
src/file/: mod.rs  writer.rs
src/fs/: clones.rs  compression.rs  dedupe.rs  filesystem.rs  mod.rs  snapshots.rs  stats.rs  volumes.rs
src/fuse/: mod.rs
src/inode/: manager.rs  mod.rs  tree.rs
src/integrity/: algorithms.rs  bad_blocks.rs  checksum_tree.rs  mod.rs  refcount.rs  tests.rs
src/kernel/: mod.rs
src/mount/: mod.rs
src/object/: tree.rs
src/ondisk/: mod.rs  serialization.rs  upgrade.rs
src/optimizer/: adaptive_cache.rs  api.rs  mod.rs  policy.rs  predictor.rs  recommender.rs  scheduler.rs  tests.rs
src/path/: mod.rs
src/pool/: device.rs  health.rs  manager.rs  mod.rs  raid.rs  recovery.rs  replication.rs  tests.rs
src/recovery/: recovery.rs
src/security/: acl.rs  encryption.rs  keys.rs  mod.rs  tests.rs
src/telemetry/: analyzer.rs  metrics.rs  mod.rs  tests.rs
src/transaction/: manager.rs  mod.rs  transaction.rs
src/utils/: checksum.rs  crc.rs
src/worker/: flusher.rs  gc.rs  mod.rs  optimizer.rs  rebalancer.rs  scrubber.rs
tests/: proptests.rs
tools/: Makefile  fsck.lfs.c  lfs-dump.c  mkfs.lfs.c
tools/admin/: main.rs
tools/analyze/: main.rs
tools/balance/: main.rs
tools/bench/: main.rs
tools/benchmark/: main.rs
tools/clone/: main.rs
tools/compress/: main.rs
tools/debug/: main.rs
tools/debug_btree/: main.rs
tools/dedupe/: main.rs
tools/device/: main.rs
tools/dump/: main.rs
tools/encrypt/: main.rs
tools/failover/: main.rs
tools/fsck/: main.rs
tools/health/: main.rs
tools/inspect/: main.rs
tools/keys/: main.rs
tools/mkfs/: main.rs
tools/monitor/: main.rs
tools/optimize/: main.rs
tools/policy/: main.rs
tools/pool/: main.rs
tools/predict/: main.rs
tools/profile/: main.rs
tools/raid/: main.rs
tools/rebuild/: main.rs
tools/recommend/: main.rs
tools/repair/: main.rs
tools/replicate/: main.rs
tools/report/: main.rs
tools/scheduler/: main.rs
tools/scrub/: main.rs
tools/security/: main.rs
tools/snapshot/: main.rs
tools/stress/: main.rs
tools/telemetry/: main.rs
tools/upgrade/: main.rs
tools/verify/: main.rs
tools/volume/: main.rs
userspace/cli/: mount.rs
