[package]
name = "lionfs"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive", "min_const_generics"] }
chacha20 = "0.10.1"
crc32fast = "1.5.0"
env_logger = "0.11.11"
fuser = "0.17.0"
getrandom = "0.4.3"
libc = "0.2.186"
log = "0.4.33"
rand = "0.10.2"
