[package]
name = "lionfs"
version = "0.1.0"
edition = "2021"
authors = ["Lion"]
description = "Phase 1: LionFS Core Extent-Based Filesystem"

[dependencies]
fuser = "0.14.0"
libc = "0.2"
bytemuck = { version = "1.14", features = ["derive", "min_const_generics"] }
crc32fast = "1.3"
log = "0.4"
env_logger = "0.10"

[lib]
name = "lionfs_core"
path = "src/lib.rs"

[[bin]]
name = "mount-lfs"
path = "userspace/cli/mount.rs"

[[bin]]
name = "mkfs-lfs"
path = "tools/mkfs/main.rs"

[[bin]]
name = "fsck-lfs"
path = "tools/fsck/main.rs"

[[bin]]
name = "debug-lfs"
path = "tools/inspect/main.rs"
