[package]
name = "lionfs"
version = "0.1.0"
edition = "2021"
authors = ["Lion"]
description = "Phase 1: LionFS Core Extent-Based Filesystem"

[dependencies]
fuser = "0.12"
libc = "0.2"
bytemuck = { version = "1.14", features = ["derive", "min_const_generics"] }
crc32fast = "1.3"
blake3 = "1.5"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
lz4_flex = "0.11"
zstd = "0.13"
flate2 = "1.0"
log = "0.4"
env_logger = "0.10"
moka = { version = "0.12", features = ["sync"] }
crossbeam = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
sha2 = "0.10"
rayon = "1.8"

[dev-dependencies]
criterion = "0.5"

[lib]
name = "lionfs_core"
path = "src/lib.rs"

[[bin]]
name = "mkfs_lfs"
path = "tools/mkfs/main.rs"

[[bin]]
name = "mount_lfs"
path = "userspace/cli/mount.rs"

[[bench]]
name = "btree_bench"
harness = false

[[bench]]
name = "allocator_bench"
harness = false

[[bench]]
name = "io_bench"
harness = false

[[bin]]
name = "debug-lfs"
path = "tools/inspect/main.rs"

[[bin]]
name = "bench-lfs"
path = "tools/bench/main.rs"

[[bin]]
name = "lfs_stress"
path = "tools/stress/main.rs"

[[bin]]
name = "lfs_snapshot"
path = "tools/snapshot/main.rs"

[[bin]]
name = "lfs_clone"
path = "tools/clone/main.rs"

[[bin]]
name = "lfs_volume"
path = "tools/volume/main.rs"

[[bin]]
name = "lfs_upgrade"
path = "tools/upgrade/main.rs"

[[bin]]
name = "lfs_admin"
path = "tools/admin/main.rs"

[[bin]]
name = "lfs_verify"
path = "tools/verify/main.rs"

[[bin]]
name = "lfs_repair"
path = "tools/repair/main.rs"

[[bin]]
name = "lfs_debug"
path = "tools/debug/main.rs"

[[bin]]
name = "lfs_dump"
path = "tools/dump/main.rs"

[[bin]]
name = "lfs_benchmark"
path = "tools/benchmark/main.rs"

[[bin]]
name = "lfs_monitor"
path = "tools/monitor/main.rs"

[[bin]]
name = "lfs_compress"
path = "tools/compress/main.rs"

[[bin]]
name = "lfs_dedupe"
path = "tools/dedupe/main.rs"

[[bin]]
name = "lfs_encrypt"
path = "tools/encrypt/main.rs"

[[bin]]
name = "lfs_keys"
path = "tools/keys/main.rs"

[[bin]]
name = "lfs_security"
path = "tools/security/main.rs"

[[bin]]
name = "lfs_optimize"
path = "tools/optimize/main.rs"

[[bin]]
name = "lfs_scrub"
path = "tools/scrub/main.rs"

[[bin]]
name = "lfs_pool"
path = "tools/pool/main.rs"

[[bin]]
name = "lfs_device"
path = "tools/device/main.rs"

[[bin]]
name = "lfs_raid"
path = "tools/raid/main.rs"

[[bin]]
name = "lfs_rebuild"
path = "tools/rebuild/main.rs"

[[bin]]
name = "lfs_replicate"
path = "tools/replicate/main.rs"

[[bin]]
name = "lfs_balance"
path = "tools/balance/main.rs"

[[bin]]
name = "lfs_failover"
path = "tools/failover/main.rs"

[[bin]]
name = "lfs_telemetry"
path = "tools/telemetry/main.rs"

[[bin]]
name = "lfs_analyze"
path = "tools/analyze/main.rs"

[[bin]]
name = "lfs_predict"
path = "tools/predict/main.rs"

[[bin]]
name = "lfs_report"
path = "tools/report/main.rs"

[[bin]]
name = "lfs_recommend"
path = "tools/recommend/main.rs"

[[bin]]
name = "lfs_policy"
path = "tools/policy/main.rs"

[[bin]]
name = "lfs_scheduler"
path = "tools/scheduler/main.rs"

[[bin]]
name = "lfs_profile"
path = "tools/profile/main.rs"

[[bin]]
name = "lfs_health"
path = "tools/health/main.rs"
